--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@ body{
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
 }
+
+.app-wrapper-content{
+  grid-area: c;
+  background: #2f2f2f;
+  border-radius: 10px;
+  padding: 20px 30px 30px;
+}
