--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,6 @@
 
 .item{
   padding-bottom: 24px;
-  font-family: "Roboto Mono", monospace;
   font-size: 20px;
   cursor: pointer;
 }
@@ -15,6 +14,10 @@
 
 .item:last-child{
   padding-bottom: 0;
+}
+
+a{
+  color: rgb(226, 225, 225);
 }
 
 a:hover{
